Revision history for DBD::Oracle

1.69_02 2014-01-19

    [IMPROVEMENTS]

    - The DSN 'dbi:Oracle:sid=foo' is now an alias for 'dbi:Oracle:foo'. 
        (RT#91775, Yanick Champoux, requested by David Wheeler)

    [BUG FIXES]

   - OCI_THREADED setting had been accidentally removed, causing potential
    crashes when using threads. (RT#92229, Martin J. Evans, reported 
    by Detlef Lütticke)

  - When using fetch*_hashref the values are decoded but
    not the keys so if you have unicode column names they were not
    returned correctly.  (RT#92134, Martin J. Evans, reported by
    Marcel Montes)


1.69_01 2014-01-14

  [BUG FIXES]

  - Fix RT91698. If you bound an output parameter to a scalar and
    repeatedly called execute the memory allocated in your bound
    scalar could increase each time. (Martin J. Evans)

1.68      2013-11-25
  - promote 1.67_00 to stable.

1.67_00   2013-11-05

  [BUG FIXES]
  - Fix RT88135. Add statistics_info support (patch by Steffen Goeldner)
  - Fix RT89491. Add RULE hint (patch by Steffen Goeldner)

  [DOCUMENTATION]
  - POD typos (RT#88285, RT#88284, Gregor Herrman).
  - Grooming of Hpux troubleshooting pod (GH#7, Martin J. Evans,
    Yanick Champoux)

1.66      2013-08-23
  - promote 1.65_00 to stable.

1.65_00   2013-07-29

  [BUG FIXES]

  - Fix RT85886. The TYPE passed to bind_col is supposed to be sticky
  and it wasn't. Attributes passed to bind_col could be lost later if
  bind_col is called again without attributes. Both of these occur
  when fetchall_arrayref is called with a slice (Martin J. Evans).

  [DOCUMENTATION]

  - Fix a bunch of typos. [GH#5, David Steinbrunner]

1.64      2013-05-22
  - promote 1.63_00 to stable.

1.63_00   2013-05-03

  [ENHANCEMENTS]
  - DBD-Oracle: Use of uninitialized value $user_only in uc [RT#84657]
    (Steffen Goeldner)

  [BUG FIXES]
  - Make 50cursor.t Oracle8-friendly. (RT#84660, patch by Steffen Goeldner)
  - Makefile.PL's use of ACL tweaked for Suse Enterprise 11 SP2