@@ -30,6 +30,9 @@ constant(name=Nullch)
 	ORA_SYSDBA	 		= 0x0002
 	ORA_SYSOPER	 		= 0x0004
 	ORA_SYSASM	 		= 0x8000
+	ORA_SYSBACKUP	 		= 0x00020000
+	ORA_SYSDG	 		= 0x00040000
+	ORA_SYSKM	 		= 0x00080000
 	SQLCS_IMPLICIT 		= SQLCS_IMPLICIT
 	SQLCS_NCHAR			= SQLCS_NCHAR
 	SQLT_INT	 		= SQLT_INT
